# cf-fns

./: .gitignore  README.md  create.sql  install-package.sh  package-lock.json  package.json  tsconfig.json  wrangler.toml
.idx/: dev.nix
app-rust/: Cargo.toml
app-rust/.cargo/: config.toml
app-rust/src/: lib.rs  utils.rs
app-web/src/: 404.html  index.html  login.html
app-web/src/cf-api/: index.html
app-web/src/earth/: index.ts
app-web/src/login/: index.html  redirect.html
app-web/src/logs/: index.html
app-web/src/nav/: index.html
app-web/src/proxy/: config.ts  es-module-sw.ts  handlers.js  index.html  index.ts  mockServiceWorker.js  service-worker.js
cert/: certificate.pem  private.pem  wrangler_cert.conf
content/cloudflare/: generate_ssl_key.md  register_domain.md
functions/: _middleware.ts  auth.ts  hello.ts  index.ts  middleware.ts  tail.ts  types.d.ts
functions/api/: distance-between.ts
functions/cf-api/: _middleware.ts
functions/login/: _middleware.ts  auth.ts
functions/logs/: _middleware.ts
functions/proxy/: [[path]].ts  _middleware.ts  proxy.ts
functions/quartz/: _middleware.ts  test.ts
functions/wasm/: [[file]].ts
functions_backup/quartz/: _middleware.ts
src/: greeting.html  greeting.ts  inject_script.txt  resource.ts
src/utils/: axiom.ts  encode.ts  fetch.ts  gfw.ts  kv.ts  load_wasm.ts  load_wasm_bunlder.ts  load_wasm_web.ts  print_request.ts  response.ts  template_replace.ts  wasi_common.ts
wasi-rust/: Cargo.toml  README.md  build-wasm-opt.sh  build.rs
wasi-rust/.cargo/: config.toml
wasi-rust/crates/html/: Cargo.toml
wasi-rust/crates/html/src/: lib.rs
wasi-rust/crates/mem/: Cargo.toml
wasi-rust/crates/nx_html/: Cargo.toml
wasi-rust/crates/nx_html/src/: lib.rs
wasi-rust/crates/nx_mem/: Cargo.toml  build.rs
wasi-rust/crates/nx_mem/src/: lib.rs  my_alloc.rs  simple_alloc.rs  ta_alloc.rs
wasi-rust/crates/nx_mem/tinyalloc/: stdint.h  tinyalloc.c  tinyalloc.h
wasi-rust/src/lib/: html_rewriter.rs
wasi-test-rust/: Cargo.toml  README.md  build.rs
wasi-test-rust/src/lib/: lib.rs  utils.rs
