[package]
name = "sample"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# wasmtime = "32.0.0"
# wit-bindgen = "0.41.0"
wasm-bindgen = { version = "0.2.99" }
# reqwest = {version ="0.12.15",  features = ["blocking"] }
flume = "0.11"
tokio = { version = "1.44.2", default-features = false, features = ["rt", "macros"] }
burn = {version = "0.16.0",default-features = false, features = ["ndarray","autodiff"] }
burn-vision = {version = "0.17.0",default-features = false, features =[] }
# async-channel = "2.3"
rand = "0.9.1"
getrandom = "0.3.2"
# ureq = "3.0.11"

# [patch.crates-io]
# async-channel = "2.3.1" 

[lib]
crate-type = ['cdylib']
name = "my_rust_function"
path = "src/lib/lib.rs"

[[bin]]
name = "wasi-test"
path = "src/bin/main.rs"

[profile.release]
opt-level = "z"
lto = true
# codegen-units = 1


# [package.metadata.component]
# target = { path = "wit/host.wit" }
# [target.wasm32-wasip1-threads]
# rustflags = [
#   "-C", "target-feature=+atomics,+bulk-memory,+mutable-globals",
# ]

# [target.wasm32-wasip1-threads]
# runner = "wasmtime run --wasm-features=threads --wasi-modules=experimental-wasi-threads"
# rustflags = [
#   "-C", "target-feature=+atomics,+bulk-memory,+mutable-globals",
# ]

# [target.'cfg(target_arch = "wasm32")']
# runner = "wasmtime run --wasm-features threads"
# [features]
# default = []
# atomics = ["wasm-bindgen/atomics"]
# bulk-memory = ["wasm-bindgen/bulk-memory"]
# threads = ["wasm-bindgen/threads"]